Fixed failing test cases to improve quaility of CI/CD
Co-authored-by: Terrior <TheTerrior@users.noreply.github.com>
Co-authored-by: Derek Guscott <derekguscott@users.noreply.github.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-SRCS       := $(wildcard */*.cpp)
+SRCS       := $(wildcard ***.cpp)
 PRGS       := $(patsubst %.cpp,%,$(SRCS))
 PRG_SUFFIX  =.test
 OBJ_SUFFIX  =.o
