--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup MPI
         uses: mpi4py/setup-mpi@v1
+        env:
+          CC: gcc-11
+          CXX: g++-11
       - run: make -C tests check -k -B
