--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,6 @@ on: [push,pull_request,workflow_dispatch]
 
 jobs:
   test:
-    env:
-       CC:   gcc-10
-       CXX:  g++-10
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -21,4 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup MPI
         uses: mpi4py/setup-mpi@v1
-      - run: make -C tests check -k -B
+      - name: Set up Clang
+        run: sudo apt update && (echo "y" | sudo apt install g++-10) && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 50
+      - name: Run Makefile Check
+        run: make -C tests check -k -B
