--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,10 @@
 name: CI
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: [push,pull_request,workflow_dispatch]
 
 jobs:
   test:
-    env:
-       CC:   gcc-10
-       CXX:  g++-10
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,4 +15,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup MPI
         uses: mpi4py/setup-mpi@v1
-      - run: make -C tests check -k -B
+      - name: Set up Clang
+        run: sudo apt update && (echo "y" | sudo apt install g++-10) && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 50
+      - name: Run Makefile Check
+        run: make -C tests check -k -B
