--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: CI
 
 # Controls when the workflow will run
+# Triggers the workflow on push or pull request events but only for the main branch
+
+# Allows you to run this workflow manually from the Actions tab
 on: [push,pull_request,workflow_dispatch]
 
 jobs:
