--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,26 +17,7 @@ message(STATUS ${MPI_INCLUDE_PATH})
 message(STATUS ${MPI_C_LIBRARIES})
 
 add_library(rmacxx INTERFACE) #add_library(RMACXX INTERFACE include/)
-target_include_directories(rmacxx INTERFACE include/)
-
+target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_SOURCE_DIR}/include/)
 target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_20)
 
-file(GLOB SOURCE_FILES ${CMAKE_SOURCE_DIR}/tests/*/*.cpp)
-
-enable_testing()
-include(CTest)
-
-create_test_sourcelist (Tests CommonCxxTests.cpp ${SOURCE_FILES})
-
-# add the executable
-add_executable (CommonCxxTests ${Tests})
-
-# remove the test driver source file
-set (TestsToRun ${Tests})
-remove (TestsToRun CommonCxxTests.cxx)
-
-# Add all the ADD_TEST for each test
-foreach (test ${TestsToRun})
-  get_filename_component (TName ${test} NAME_WE)
-  add_test (NAME ${TName} COMMAND CommonCxxTests ${TName})
-endforeach ()
+add_subdirectory(${CMAKE_SOURCE_DIR}/tests)
