--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 name: CI
 
 # Controls when the workflow will run
-# Triggers the workflow on push or pull request events but only for the main branch
-
-# Allows you to run this workflow manually from the Actions tab
 on: [push,pull_request,workflow_dispatch]
 
 jobs:
@@ -18,7 +15,15 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup MPI
         uses: mpi4py/setup-mpi@v1
+        with:
+          mpi: ${{ matrix.mpi }}    
       - name: Set up Clang
-        run: sudo apt update && (echo "y" | sudo apt install g++-10) && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 50
-      - name: Run Makefile Check
-        run: make -C tests check -k -B
+        run:  (echo "y" | sudo apt install g++-10) && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 50
+      - name: Get CMake
+        uses: lukka/get-cmake@latest
+      - name: Run CMake
+        uses: lukka/run-cmake@v10
+        with:
+          configurePreset: default
+          testPreset: default
+          buildPreset: default
