--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        mpi: ["mpich", "openmpi"]
+        mpi: ["mpich"]
     name: ${{ matrix.mpi }}
     steps:
       - name: Checkout
